# biofilm-model

./: .gitignore  Cargo.toml  README.md  box_plots.py  main.py  pyproject.toml  separate_plots.py
rust/biofilm/: Cargo.toml  pyproject.toml
rust/biofilm/src/: lib.rs
