[project]
name = "biofilm-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "maturin>=1.12.4",
    "numpy>=2.4.2",
]

[build-system]
requires = ["maturin>=1.12.4"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/biofilm/Cargo.toml"
